--- a/templates/index.html
+++ b/templates/index.html
@@ -17,17 +17,97 @@
             <li><a href="#tab4">Incident Details</a></li>
         </ul>
         <div id="tab1" class="tab-content">
-            <h2>Tab 1 Content</h2>
-            <p>This is the content for Tab 1.</p>
+            <h1>Traffic Incidents Map</h1>
+
+            <form method="POST">
+                {{ form.csrf_token }}
+                {{ form.start_date.label }} {{ form.start_date }}
+                {{ form.end_date.label }} {{ form.end_date }}
+                <select name="incident"> 
+                    <option value="">Select Incident</option>
+                    {% for incident in available_incidents %}
+                        <option value="{{ incident }}">{{ incident }}</option>
+                    {% endfor %}
+                </select>
+                {{ form.submit }}
+            </form>
+        
+            {{ map_html | safe }}
         </div>
         <div id="tab2" class="tab-content">
-            <h2>Tab 2 Content</h2>
-            <p>This is the content for Tab 2.</p>
+            <div class="container my-5">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Incidents by Year</h5>
+                                {{ chart_data.year_chart | safe }}
+                                
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-6 col-md-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Incidents by Month</h5>
+                                {{ chart_data.month_chart | safe }}
+                                
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-6 col-md-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Incidents by Hour</h5>
+                                {{chart_data.hour_chart | safe }}
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-6 col-md-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Incidents by Day of the Week</h5>
+                                {{ chart_data.day_chart | safe }}
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-12 col-md-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Incidents by Type (top20)</h5>
+                                {{ chart_data.type_chart | safe }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        
+
+            <h5>Incidents by Month and Type</h5>
+            <div id="table-container">
+                <table id="monthly-type-table" class="table">
+                    <thead>
+                        <tr>
+                            <th>Month</th>
+                            <th>Type</th>
+                            <th>Count</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody> 
+                </table>
+            </div>
+
         </div>
+
         <div id="tab3" class="tab-content">
             <h2>Tab 3 Content</h2>
             <p>This is the content for Tab 3.</p>
         </div>
+        
     </div>
 
     <script>
