--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dubai Traffic Incidents App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <Link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+<!-- Suggested code may be subject to a license. Learn more: ~LicenseLog:3609366412. -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
     <div class="tabs">
@@ -74,7 +74,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-6 col-md-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Incidents by Day vs Hour</h5>
+                                {{ chart_data.heatmap | safe }}
+                            </div>
+                        </div>
+                    </div>"
                     
+                    <div class="col-lg-12 col-md-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Incidents by Type (top20)</h5>
+                                {{ chart_data.type_chart | safe }}
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-12 col-md-12 mb-4">
                         <div class="card">
                             <div class="card-body">
