--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,9 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Incidents by Year</h5>
-                                {{ chart_data.year_chart | safe }}
+                                <div class="chart-container">
+                                    {{ chart_data.year_chart | safe }}
+                                </div>
                                 
                             </div>
                         </div>
@@ -81,9 +83,9 @@
                                 {{ chart_data.heatmap | safe }}
                             </div>
                         </div>
-                    </div>"
+                    </div>
                     
-                    <div class="col-lg-12 col-md-12 mb-4">
+                    <div class="col-lg-6 col-md-12 mb-4">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Incidents by Type (top20)</h5>
